--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "dependencies": {
     "ramda": "^0.27.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2"
   },
   "husky": {
     "hooks": {
@@ -52,6 +53,8 @@
     }
   },
   "jest": {
-    "setupFilesAfterEnv": ["<rootDir>src/testSetup.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>src/testSetup.js"
+    ]
   }
 }
