--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test && npm test"
+      "pre-commit": "npm run lint && npm run test"
     }
   },
   "jest": {
